WebGL demos show bad flicker https://bugs.webkit.org/show_bug.cgi?id=38560

Canonical link: https://commits.webkit.org/52442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61432 268f45cc-cd09-0410-ab3c-d52691b4dbfc